--- a/demo/index.html
+++ b/demo/index.html
@@ -24,20 +24,12 @@
       <demo-snippet>
         <template>
           <iron-collapse-button>
-            <div slot="collapse-trigger">
-              Trigger
-            </div>
-            <div slot="collapse-content">
-              Content
-            </div>
+            <div slot="collapse-trigger">Trigger</div>
+            <div slot="collapse-content">Content</div>
           </iron-collapse-button>
-          <iron-collapse-button>
-            <div slot="collapse-trigger" class="flex">
-              Flexbox trigger
-            </div>
-            <div slot="collapse-content">
-              Content
-            </div>
+          <iron-collapse-button opened>
+            <div slot="collapse-trigger" class="flex">Flexbox trigger</div>
+            <div slot="collapse-content">Content</div>
           </iron-collapse-button>
         </template>
       </demo-snippet>
