--- a/demo/index.html
+++ b/demo/index.html
@@ -11,11 +11,13 @@
 
     <link rel="import" href="../iron-collapse-button.html">
 
-    <style is="custom-style" include="demo-pages-shared-styles">
+    <custom-style>
+    <style include="demo-pages-shared-styles">
       .flex {
         @apply --layout-flex;
       }
     </style>
+  </custom-style>
   </head>
   <body>
 
