Update to Polymer 2.0

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,12 +12,15 @@
     <link rel="import" href="../iron-collapse-button.html">
 
     <custom-style>
-    <style include="demo-pages-shared-styles">
-      .flex {
-        @apply --layout-flex;
-      }
-    </style>
-  </custom-style>
+      <style is="custom-style" include="demo-pages-shared-styles">
+        .flex {
+          @apply --layout-flex;
+        }
+        iron-collapse-button {
+          margin: 8px 0;
+        }
+      </style>
+    </custom-style>
   </head>
   <body>
 
