--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,7 @@
     <link rel="import" href="../iron-collapse-button.html">
 
     <custom-style>
-      <style is="custom-style" include="demo-pages-shared-styles">
+      <style include="demo-pages-shared-styles">
         .flex {
           @apply --layout-flex;
         }
