add strip-whitespace to template

--- a/iron-collapse-button.html
+++ b/iron-collapse-button.html
@@ -12,7 +12,7 @@ An iron-collapse with a trigger section and optional expand/collapse icons.
 @demo demo/index.html
 -->
 <dom-module id="iron-collapse-button">
-  <template>
+  <template strip-whitespace>
     <style>
       :host {
         display: block;
